--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mondo"
         tools:targetApi="31">
+        <activity android:name=".activities.RegisterActivity"></activity>
 
         <activity android:name=".activities.MainActivity"
             android:exported="true">
