--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Mondo"
         tools:targetApi="31">
         <activity android:name=".activities.RegisterActivity"></activity>
-
+        <activity android:name=".activities.HomePageActivity"></activity>
         <activity android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
