--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
         <activity android:name=".activities.RegisterActivity"></activity>
         <activity android:name=".activities.HomePageActivity"></activity>
+        <activity android:name=".activities.ArticleActivity"></activity>
         <activity android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
